fixed overflow / added scroll for home containers

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,13 @@
   background-clip: content-box;
 }
 
+.scrollbar-invisible::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0);
+}
+.scrollbar-invisible:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
 a,
 ul > div {
   cursor: pointer;
